run backend formatter