@@ -1,11 +1,15 @@
 package ch.puzzle.okr.service.business;
 
-import ch.puzzle.okr.test.TestHelper;
+import java.util.Arrays;
+import java.util.List;
+
 import ch.puzzle.okr.exception.OkrResponseStatusException;
 import ch.puzzle.okr.models.User;
 import ch.puzzle.okr.service.CacheService;
 import ch.puzzle.okr.service.persistence.UserPersistenceService;
 import ch.puzzle.okr.service.validation.UserValidationService;
+import ch.puzzle.okr.test.TestHelper;
+
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,9 +20,6 @@ import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
-
-import java.util.Arrays;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
@@ -39,51 +40,75 @@ class UserBusinessServiceTest {
     @BeforeEach
     void setUp() {
         User userAlice = User.Builder.builder() //
-                .withId(2L) //
-                .withFirstname("Alice") //
-                .withLastname("Wunderland") //
-                .withEmail("wunderland@puzzle.ch") //
-                .build();
+                                     .withId(2L) //
+                                     .withFirstname("Alice") //
+                                     .withLastname("Wunderland") //
+                                     .withEmail("wunderland@puzzle.ch") //
+                                     .build();
 
         User userBob = User.Builder.builder() //
-                .withId(9L) //
-                .withFirstname("Bob") //
-                .withLastname("Baumeister") //
-                .withEmail("baumeister@puzzle.ch") //
-                .build();
+                                   .withId(9L) //
+                                   .withFirstname("Bob") //
+                                   .withLastname("Baumeister") //
+                                   .withEmail("baumeister@puzzle.ch") //
+                                   .build();
 
         userList = Arrays.asList(userAlice, userBob);
     }
 
     @Test
     void shouldReturnAllUsersCorrect() throws ResponseStatusException {
-        Mockito.when(userPersistenceService.findAll()).thenReturn(userList);
+        Mockito.when(userPersistenceService.findAll())
+               .thenReturn(userList);
 
         List<User> userList = userBusinessService.getAllUsers();
 
-        Assertions.assertThat(userList.size()).isEqualTo(2);
-        Assertions.assertThat(userList.getFirst().getId()).isEqualTo(2);
-        Assertions.assertThat(userList.getFirst().getFirstname()).isEqualTo("Alice");
-        Assertions.assertThat(userList.get(0).getLastname()).isEqualTo("Wunderland");
-        Assertions.assertThat(userList.get(0).getEmail()).isEqualTo("wunderland@puzzle.ch");
-        Assertions.assertThat(userList.get(1).getId()).isEqualTo(9);
-        Assertions.assertThat(userList.get(1).getFirstname()).isEqualTo("Bob");
-        Assertions.assertThat(userList.get(1).getLastname()).isEqualTo("Baumeister");
-        Assertions.assertThat(userList.get(1).getEmail()).isEqualTo("baumeister@puzzle.ch");
+        Assertions.assertThat(userList.size())
+                  .isEqualTo(2);
+        Assertions.assertThat(userList.getFirst()
+                                      .getId())
+                  .isEqualTo(2);
+        Assertions.assertThat(userList.getFirst()
+                                      .getFirstname())
+                  .isEqualTo("Alice");
+        Assertions.assertThat(userList.get(0)
+                                      .getLastname())
+                  .isEqualTo("Wunderland");
+        Assertions.assertThat(userList.get(0)
+                                      .getEmail())
+                  .isEqualTo("wunderland@puzzle.ch");
+        Assertions.assertThat(userList.get(1)
+                                      .getId())
+                  .isEqualTo(9);
+        Assertions.assertThat(userList.get(1)
+                                      .getFirstname())
+                  .isEqualTo("Bob");
+        Assertions.assertThat(userList.get(1)
+                                      .getLastname())
+                  .isEqualTo("Baumeister");
+        Assertions.assertThat(userList.get(1)
+                                      .getEmail())
+                  .isEqualTo("baumeister@puzzle.ch");
     }
 
     @Test
     void shouldReturnEmptyUsers() throws ResponseStatusException {
         List<User> userList = userBusinessService.getAllUsers();
 
-        Assertions.assertThat(userList.size()).isEqualTo(0);
+        Assertions.assertThat(userList.size())
+                  .isEqualTo(0);
     }
 
     @Test
     void shouldReturnSingleUserWhenFindingOwnerByValidId() {
-        User owner = User.Builder.builder().withId(1L).withFirstname("Bob").withLastname("Kaufmann")
-                .withEmail("kaufmann@puzzle.ch").build();
-        Mockito.when(userPersistenceService.findById(any())).thenReturn(owner);
+        User owner = User.Builder.builder()
+                                 .withId(1L)
+                                 .withFirstname("Bob")
+                                 .withLastname("Kaufmann")
+                                 .withEmail("kaufmann@puzzle.ch")
+                                 .build();
+        Mockito.when(userPersistenceService.findById(any()))
+               .thenReturn(owner);
 
         User returnedUser = userBusinessService.getUserById(1L);
 
@@ -95,9 +120,14 @@ class UserBusinessServiceTest {
 
     @Test
     void getOrCreateUserShouldReturnSingleUserWhenUserFound() {
-        User newUser = User.Builder.builder().withId(1L).withFirstname("Bob").withLastname("Kaufmann")
-                .withEmail("kaufmann@puzzle.ch").build();
-        Mockito.when(userPersistenceService.getOrCreateUser(any())).thenReturn(newUser);
+        User newUser = User.Builder.builder()
+                                   .withId(1L)
+                                   .withFirstname("Bob")
+                                   .withLastname("Kaufmann")
+                                   .withEmail("kaufmann@puzzle.ch")
+                                   .build();
+        Mockito.when(userPersistenceService.getOrCreateUser(any()))
+               .thenReturn(newUser);
 
         User returnedUser = userBusinessService.getOrCreateUser(newUser);
 
@@ -109,9 +139,14 @@ class UserBusinessServiceTest {
 
     @Test
     void getOrCreateUserShouldReturnSavedUserWhenUserNotFound() {
-        User newUser = User.Builder.builder().withId(1L).withFirstname("Bob").withLastname("Kaufmann")
-                .withEmail("kaufmann@puzzle.ch").build();
-        Mockito.when(userPersistenceService.getOrCreateUser(newUser)).thenReturn(newUser);
+        User newUser = User.Builder.builder()
+                                   .withId(1L)
+                                   .withFirstname("Bob")
+                                   .withLastname("Kaufmann")
+                                   .withEmail("kaufmann@puzzle.ch")
+                                   .build();
+        Mockito.when(userPersistenceService.getOrCreateUser(newUser))
+               .thenReturn(newUser);
 
         User returnedUser = userBusinessService.getOrCreateUser(newUser);
 
@@ -123,13 +158,18 @@ class UserBusinessServiceTest {
 
     @Test
     void getOrCreateUserShouldThrowResponseStatusExceptionWhenInvalidUser() {
-        User newUser = User.Builder.builder().withId(1L).withFirstname("Bob").withLastname("Kaufmann")
-                .withEmail("kaufmann@puzzle.ch").build();
+        User newUser = User.Builder.builder()
+                                   .withId(1L)
+                                   .withFirstname("Bob")
+                                   .withLastname("Kaufmann")
+                                   .withEmail("kaufmann@puzzle.ch")
+                                   .build();
         Mockito.doThrow(new ResponseStatusException(HttpStatus.BAD_REQUEST, "Not allowed to give an id"))
-                .when(validationService).validateOnGetOrCreate(newUser);
+               .when(validationService)
+               .validateOnGetOrCreate(newUser);
 
         ResponseStatusException exception = assertThrows(ResponseStatusException.class,
-                () -> userBusinessService.getOrCreateUser(newUser));
+                                                         () -> userBusinessService.getOrCreateUser(newUser));
 
         assertEquals(HttpStatus.BAD_REQUEST, exception.getStatusCode());
         assertEquals("Not allowed to give an id", exception.getReason());
